[package]
name = "rug-miller-rabin"
description = "A multi-threaded, arbitrary precision implementation of the Miller-Rabin primality test using rug (GMP)."
version = "0.1.4"
edition = "2024"
authors = ["Denis Morel"]
rust-version = "1.90"
license = "LGPL-3.0+"
repository = "https://github.com/de-mo/rug-miller-rabin"
readme = "README.md"
keywords = ["gmp", "math", "prime", "miller", "rabin"]
categories = ["cryptography", "mathematics"]

[dependencies]
rayon = { version = "1", optional = true }
rand = "0.9"

[dependencies.rug]
version = "1"
default-features = false
features = ["integer", "std", "rand"]

[dev-dependencies]
# For performance tests
num-bigint = "0.4"
miller_rabin = "1"
num-traits = "0.2"

[features]
default = ["rayon"]
